syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

/*
    This table shows the available (unused) locates for each locate pool and firm.  Value update as trades occur that utilizes existing locates.
*/    
message AvailableStockLocates {
    message PKey {
        
        TickerKey ticker = 10;
        string core_client_firm = 11;
        string locate_firm = 12;
        string locate_pool = 13; // locate pool @ firm granting the locate
        DateKey trade_date = 15;
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    int32 locate_quan = 100; // locate quantity sourced
    int32 locate_quan_used = 103; // shares sold short against this locate
    int32 available_locate_quan = 106; // locate balance currently available
    YesNo is_locate_exempt = 109; // only market makers can be exempt
    string engine_name = 116; // SR server code
    google.protobuf.Timestamp timestamp = 115;
}


